--- a/webpage/package.json
+++ b/webpage/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpage",
   "version": "0.1.0",
-  "homepage": "https://william-frier.github.io/webpage",
+  "homepage": "https://william-frier.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
