--- a/webpage/package.json
+++ b/webpage/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.3",
     "web-vitals": "^2.1.4"
@@ -43,6 +44,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://william-frier.github.io/webpage"
-
+  "homepage": "https://william-frier.github.io/"
 }
