--- a/webpage/package.json
+++ b/webpage/package.json
@@ -13,6 +13,8 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-native": "^0.82.1",
+    "react-native-web": "^0.21.2",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.3",
